Fixed some styling to look better on mobile and to be more responsive.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 .container{
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -55,13 +55,14 @@ body{
     font-size: 4rem;
     line-height: 4rem;
     letter-spacing: 15px;
+    padding-bottom: 5px;
 }
 
 .addToDo{
     background: #25273C;
     border-radius: .7rem;
     position: inherit;
-    min-width: 800px;
+    min-width: 60%;
     height: 29px;
     left: 320px;
     top: 152px;
@@ -90,14 +91,13 @@ body{
 }
 .content{
     position: inherit;
-    min-width: 800px;
+    min-width: 60%;
     min-height: 148;
     left: 32rem;
     top: 29.6rem;
     background: #25273C;
     border-radius: .7rem;
     margin-top: 50px;
-    padding-left: 25px;
     padding-top: 25px;
     padding-bottom: 25px;
 
@@ -117,6 +117,12 @@ body{
 
 ul {
     list-style-type: none;
+    padding:0;
+
+}
+
+li{
+    padding-left: 10px;
 }
 
 .line-through{
@@ -127,25 +133,27 @@ ul {
 .circle {
     width: 24px;
     height: 24px;
-    left: 36px;
-    top: 280px;
     border: 1px solid rgba(255, 255, 255, 0.4);
     box-sizing: border-box;
     border-radius: 25px;
     float: left;
     background-color: transparent;
+
 }
 .check{
-    position: static;
     width: 24px;
     height: 24px;
     left: 36px;
     top: 224px;
-    background: linear-gradient(131.73deg, #72bef842 14.46%, #a674f244 87.62%), url('images/icon__check.png');
+    background: linear-gradient(131.73deg, #72bef8 14.46%, #a674f2 87.62%);
     border-radius: 25px;
     background-repeat: no-repeat;
     background-size: contain;
-    float: left
+    float: left;
+    border: none;
+}
+.hidden{
+    visibility: hidden;
 }
 
 .remove{
@@ -155,6 +163,7 @@ ul {
     bottom: 0%;
     float: right;
     background-color: transparent;
+    border: none;
 }
 
 .img:hover{
@@ -170,20 +179,20 @@ ul {
 }
 
 .item{
-    width:90%;
+    width:98.5%;
     height: 45px;
     font-size: 16px;
     min-height: 45px;
     position: relative;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     list-style: none;
-    padding: 0;
+    padding-top: 15px;
     margin: 0;
 }
 
 .item p.text{
     position: absolute;
-    padding:0;
+    padding-top: 10px;
     margin:0;
     left:50px;
     top:5px;
@@ -196,4 +205,8 @@ ul {
     color: white;
     font-size: 16px;
     border: none;
+    padding-top: 15px;
+    padding-left: 15px;
 }
+
+
